# languagetutor

./: README.md  example.env  pyproject.toml  requirements.txt  tutor.ipynb
.ipynb_checkpoints/: tutor-checkpoint.ipynb
langtutor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
