[project]
name = "langtutor"
version = "0.1.0"
description = "Language Tutor RAG App"
requires-python = ">=3.12,<3.14"

dependencies = [
    # =====================================================
    # Core LangChain / LLM Stack
    # =====================================================
    "langchain==1.1.3",
    "langchain-core==1.1.3",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.1",
    "langchain-anthropic==1.0.3",
    "langchain-text-splitters==1.0.0",
    "langchain-model-profiles==0.0.4",
    "langchain-tavily==0.2.13",
    "langchain-mcp-adapters==0.1.13",

    # =====================================================
    # LangGraph
    # =====================================================
    "langgraph==1.0.3",
    "langgraph-cli==0.4.9",
    "langgraph-api==0.5.37",

    # =====================================================
    # MCP
    # =====================================================
    "mcp==1.21.1",

    # =====================================================
    # Search / Tavily
    # =====================================================
    "tavily-python==0.7.13",
    "tavily==1.1.0",

    # =====================================================
    # Model Providers
    # =====================================================
    "openai==1.109.1",
    "langchain-google-vertexai==3.0.3",
    "langchain-google-genai==3.1.0",

    # =====================================================
    # Documents / Parsing
    # =====================================================
    "pypdf==6.2.0",

    # =====================================================
    # Scientific / Audio
    # =====================================================
    "scipy==1.16.3",
    "sounddevice==0.5.3",

    # =====================================================
    # Notebook / Dev
    # =====================================================
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8",
    "jupyterlab==4.5.7",

    # =====================================================
    # Utilities
    # =====================================================
    "python-dotenv==1.2.0",

    # =====================================================
    # Observability
    # =====================================================
    "langsmith==0.4.43",
]

[build-system]
requires = ["setuptools>=61.0","wheel",]
build-backend = "setuptools.build_meta"
